[package]
name = "indranet-runtime"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26" }

[dependencies]
smallvec = "1.8.1"
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }

# Substrate
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.26" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.26" }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", default-features = false }

# Selendra
selendra-core-primitives = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
selendra-parachain = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
selendra-runtime-common = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
selendra-runtime-constants = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
pallet-xcm = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
xcm = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
xcm-builder = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
xcm-executor = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }

# Forests
pallet-collator-selection = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
parachain-info = { package = "forests-parachain-info",git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-aura-ext = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-dmp-queue = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-parachain-system = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-session-benchmarking = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-xcm = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-pallet-xcmp-queue = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-primitives-core = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-primitives-timestamp = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }
forests-primitives-utility = { git = "https://github.com/selendra/selendra", branch = "development", default-features = false }

# Indranet
indranet-primitive = { path = "../../primitives", default-features = false }
indranet-runtime-common = { path = "../common", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"forests-pallet-aura-ext/std",
	"forests-pallet-dmp-queue/std",
	"forests-pallet-parachain-system/std",
	"forests-pallet-xcm/std",
	"forests-pallet-xcmp-queue/std",
	"forests-primitives-core/std",
	"forests-primitives-timestamp/std",
	"forests-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-proxy/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"pallet-assets/std",
	"pallet-asset-tx-payment/std",
	"pallet-multisig/std",
	"parachain-info/std",
	"selendra-parachain/std",
	"selendra-runtime-common/std",
	"selendra-runtime-constants/std",
	"selendra-core-primitives/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"indranet-primitive/std",
	"indranet-runtime-common/std",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-proxy/std",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"forests-pallet-session-benchmarking/runtime-benchmarks",
	"forests-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
]
